# juggernaut-rail

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  generate_proof.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  vercel.json
api/: index.py  requirements.txt
deploy/: nginx.conf
proof/: public_key.pem  receipts.json  verification_proof.json
src/: __init__.py  cli.py
src/api/: __init__.py  server.py
src/billing/: __init__.py  license.py  metering.py  penny_counter.py  stripe_integration.py
src/core/: __init__.py  cdt.py  epoch.py  policy.py  receipt.py  veto.py
src/crypto/: __init__.py  keys.py  signer.py
src/enforcement/: __init__.py  gate.py
src/persistence/: __init__.py  database.py  models.py  repository.py
src/refinery/: __init__.py  evaluator.py  profiles.py
tests/: __init__.py  conftest.py  test_api.py  test_cdt.py  test_crypto.py  test_receipt.py  test_veto.py
