[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "juggernaut-rail"
version = "1.0.0"
description = "Cryptographic AI Governance Rail - CDT Enforcement, Receipt Generation, Zero-Multiplier Veto, and Integrated Billing"
readme = "README.md"
license = "Proprietary"
requires-python = ">=3.11"
authors = [
    { name = "Abraham Manzano", email = "abraham@finalbosstech.com" }
]
keywords = [
    "ai-governance",
    "cryptographic-receipts",
    "consent-management",
    "post-quantum",
    "ml-dsa",
    "cdt",
    "veto-architecture"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "motor>=3.6.0",
    "redis>=5.2.0",
    "stripe>=11.0.0",
    "pyyaml>=6.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.21.0",
    "python-multipart>=0.0.17",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
]
pqc = [
    "pqcrypto>=0.1.0",  # Post-quantum crypto when available
]

[project.scripts]
juggernaut = "juggernaut_rail.cli:main"
juggernaut-api = "juggernaut_rail.api.server:run"

[project.urls]
Homepage = "https://finalbosstech.com"
Documentation = "https://docs.finalbosstech.com/juggernaut-rail"
Repository = "https://github.com/805-ai/juggernaut-rail"

[tool.hatch.build.targets.wheel]
packages = ["src/juggernaut_rail"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
